[gd_scene load_steps=9 format=3 uid="uid://6j1us6wd3ns"]

[ext_resource type="Script" path="res://Scenes/Enemys/spike_ball.gd" id="1_lpcwe"]
[ext_resource type="Texture2D" uid="uid://bsnl24to1fqni" path="res://Assets/Traps/Spiked Ball/Spiked Ball.png" id="2_3w4i1"]
[ext_resource type="Texture2D" uid="uid://dbrrp73f78oj1" path="res://Assets/Traps/Spiked Ball/Chain.png" id="3_1us2r"]

[sub_resource type="CircleShape2D" id="CircleShape2D_k5yub"]
radius = 11.5109

[sub_resource type="CircleShape2D" id="CircleShape2D_0grer"]
radius = 12.5

[sub_resource type="Animation" id="Animation_xkbn8"]
resource_name = "regular_move"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="Animation" id="Animation_fnh2y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ligfu"]
_data = {
"RESET": SubResource("Animation_fnh2y"),
"regular_move": SubResource("Animation_xkbn8")
}

[node name="SpikeBall" type="Node2D"]
scale = Vector2(2, 2)
script = ExtResource("1_lpcwe")

[node name="Chain" type="Sprite2D" parent="."]
texture = ExtResource("3_1us2r")

[node name="SpikedBall" type="Sprite2D" parent="."]
position = Vector2(0, 15)
texture = ExtResource("2_3w4i1")

[node name="area_colision_with_map" type="Area2D" parent="SpikedBall"]
visible = false
position = Vector2(0, -15)

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpikedBall/area_colision_with_map"]
position = Vector2(0, 16)
shape = SubResource("CircleShape2D_k5yub")

[node name="damage_zone" type="Area2D" parent="SpikedBall"]
position = Vector2(0, -15)
collision_layer = 2
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpikedBall/damage_zone"]
position = Vector2(0.5, 16)
shape = SubResource("CircleShape2D_0grer")

[node name="raycast_floor_detection" type="RayCast2D" parent="."]
target_position = Vector2(0, 30)

[node name="safeTime" type="Timer" parent="."]

[node name="Animation_rotation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ligfu")
}

[connection signal="body_entered" from="SpikedBall/area_colision_with_map" to="." method="_on_area_colision_with_map_body_entered"]
[connection signal="timeout" from="safeTime" to="." method="_on_safe_time_timeout"]
